samples til emnesortering

--- a/Script for making paragraffs.ipynb
+++ b/Script for making paragraffs.ipynb
@@ -30,8 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df1 = pd.read_csv('13300.csv') ## Hent DataFrame\n",
