--- a/Kodebog.ipynb
+++ b/Kodebog.ipynb
@@ -4,20 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kodeobog:\n",
+    "# Kodebog:\n",
     "\n",
-    "### international politik\n",
+    "### International politik\n",
     "- \"**international politik**, begreb, der anvendes om de politiske forbindelser mellem stater indbyrdes og mellem andre aktører i det internationale system. Ofte anvendes betegnelsen internationale relationer for at understrege, at staternes udenrigspolitik skal ses i sammenhæng med forholdet til multinationale selskaber, internationale organisationer og andre sammenslutninger. International politik betegner også den videnskab, der beskæftiger sig med disse forhold. I Danmark er studiet af international politik en del af statsvidenskaben, men omfatter også både historiske, sociologiske, økonomiske og juridiske emner\".\n",
     "    \n",
     "http://denstoredanske.dk/Samfund,_jura_og_politik/Samfund/International_politik_og_organisationer/international_politik *acessed 17.08.2017*\n",
     "\n",
-    "### økonomi & velfærd\n",
+    "### Økonomi & velfærd\n",
     "- \"**velfærd**, i økonomisk teori opfyldelse af forbrugernes behov [...]. I dagligdagens noget bredere betydning, som bl.a. kommer til udtryk i ordet velfærdsstat, indgår desuden elementer af samfundsmæssig solidaritet og sikring af den enkelte mod især de økonomiske konsekvenser af usikre vilkår på mange områder. [...] Måling af velfærd har optaget økonomer siden midt i 1800-t. Økonomisk velfærd er imidlertid kun en del af den totale velfærd, nemlig den del, som direkte eller indirekte kan måles i penge, den materielle velfærd.\"\n",
     "    \n",
     "http://denstoredanske.dk/Samfund%2c_jura_og_politik/%c3%98konomi/Marked_og_velf%c3%a6rd/velf%c3%a6rd\n",
     "*acessed 17.08.2017*\n",
     "\n",
-    "### retspolitik, kriminalitet & politi\n",
+    "### Retspolitik, kriminalitet & politi\n",
     "- \" **retspolitik** , overvejelser om ændring af retsregler for at opnå en ønsket retstilstand, fx forslag til ændring af Straffeloven med henblik på at bekæmpe voldskriminalitet.De politiske partiers retspolitik fremføres bl.a. i Folketingets Retsudvalg i forbindelse med behandling af lovforslag, mens advokater og universitetsansatte m.fl. fremsætter forslag i juridiske tidsskrifter og i den almindelige debat, fx i aviserne.\"\n",
     "    \n",
     "http://denstoredanske.dk/Samfund,_jura_og_politik/Jura/Almindelig_retsl%C3%A6re,_retsfilosofi_og_terminologi/retspolitik\n",
@@ -39,7 +39,7 @@
     "*acessed 17.08.2017*\n",
     "\n",
     "\n",
-    "### familie & børn\n",
+    "### Familie & børn\n",
     "- \"**familie**, i Danmark en social gruppe, der består af to generationer, forældre og børn, der normalt lever i samme husstand. Børn regnes i denne sammenhæng som personer under 26 år.Der kan være afvigelser fra en sådan grundmodel af en familie, fx eneforsørgerfamilien, den nydannede familie eller familien, hvor børnene ikke for øjeblikket lever i hjemmet. Men husstanden med kun én person eller med andre former for slægtsrelationer (fx ældre søskende, der bor sammen) opfattes i Danmark ikke som en egentlig familie i modsætning til flere andre steder i den vestlige verden, fx USA.\" \n",
     "\n",
     "\n",
@@ -54,7 +54,7 @@
     "http://denstoredanske.dk/Krop,_psyke_og_sundhed/Sundhedsvidenskab/B%C3%B8rnesygdomme_og_medf%C3%B8dte_misdannelser/b%C3%B8rn\n",
     "*acessed 17.08.2017*\n",
     "\n",
-    "### uddannelse\n",
+    "### Uddannelse\n",
     "- \"I **uddannelse** kombineres aspekter af undervisning, dannelse og opdragelse.Uddannelse afgrænses i forhold til undervisning ved især at beskæftige sig med det formelle uddannelsessystem, i forhold til dannelse ved især at omfatte den kompetencegivende vidensformidling og i forhold til opdragelse ved især at belyse samfundsbestemte forventninger til den enkeltes adfærd og holdninger.\n",
     "I moderne betydning er der tale om uddannelse, når aktiviteten er\n",
     "\n",
@@ -68,7 +68,7 @@
     "*acessed 17.08.2017*\n",
     "\n",
     "\n",
-    "### kultur & religion\n",
+    "### Kultur & religion\n",
     "\n",
     "- \"Den i dansk sammenhæng oftest citerede definition på **kultur** stammer fra Hartvig FrischsEuropas Kulturhistorie (1928): \"Kultur er Vaner\". Her defineres kultur først og fremmest som tradition, som skaber af sammenhæng og kontinuitet[.]\"\n",
     "\n",
@@ -85,7 +85,7 @@
     "http://denstoredanske.dk/Sprog,_religion_og_filosofi/Religion_og_mystik/Primitiv_religion/religion\n",
     "*acessed 17.08.2017*\n",
     "\n",
-    "### køn & ligestilling\n",
+    "### Køn & ligestilling\n",
     "\n",
     "- \"Sammen med alder og familie har **køn** været grundlæggende for den sociale struktur i alle hidtil kendte samfund og dermed afgørende for, hvilke pligter og privilegier den enkelte er blevet tillagt.At tilhøre et bestemt køn er i den forstand at indtage en bestemt social rolle, en kønsrolle. Selvom kønsrollerne har været meget forskellige i de forskellige samfundstyper og historiske perioder, har de altid udgjort en del af samfundets fundament.\"\n",
     "\n",
@@ -99,7 +99,7 @@
     "*acessed 17.08.2017*\n",
     "\n",
     "\n",
-    "### medier, kommunikation & it\n",
+    "### Medier, kommunikation & it\n",
     "- \"[**Medier** er] midler, der benyttes ved **kommunikation**. Den direkte eller personlige kommunikations medier er tale, gestik og skrift. Massekommunikationens medier er enten trykte, fx aviser og ugeblade, auditive, fx radio og grammofonplader, eller billedbaserede som film, tv og video.\"\n",
     "\n",
     "http://denstoredanske.dk/Samfund,_jura_og_politik/Massemedier/Massekommunikation/medier\n",
@@ -110,7 +110,7 @@
     "http://denstoredanske.dk/It,_teknik_og_naturvidenskab/Informatik/Software,_programmering,_internet_og_webkommunikation/it\n",
     "*acessed 17.08.2017*\n",
     "\n",
-    "### miljø & klima\n",
+    "### Miljø & klima\n",
     "- \"miljø, de ydre forhold, der påvirker mennesker og andre organismer. Tidligere blev begrebet mest anvendt om de fysiske, kemiske og biologiske faktorer, der er bestemmende for, hvordan dyr og planter trives (miljøfaktorer). Fra midt i 1960'erne kom ordet ind i den offentlige debat i forbindelse med forurening. Nu bruges miljø ofte meget bredt og omfatter ud over kvaliteten af vand, luft og andre fysiske omgivelser, fx et smukt skovmiljø [.]\"\n",
     "\n",
     "http://denstoredanske.dk/Natur_og_milj%C3%B8/%C3%98kologi/milj%C3%B8\n",
@@ -121,7 +121,7 @@
     "https://www.experimentarium.dk/klima/definition-af-klima\n",
     "*acessed 17.08.2017*\n",
     "\n",
-    "### flygtninge & intengrationspolitik\n",
+    "### Flygtninge & intengrationspolitik\n",
     "\n",
     "- \"**flygtning**, ifølge FN's Flygtningekonvention et menneske, der som følge af velbegrundet frygt for forfølgelse pga. sin race, religion, nationalitet, sit tilhørsforhold til en særlig social gruppe eller pga. sine politiske anskuelser befinder sig uden for det land, hvori han har statsborgerret, og som ikke er i stand til eller pga. en sådan frygt ikke ønsker at søge dette lands beskyttelse.\"\n",
     "\n",
@@ -133,10 +133,10 @@
     "http://denstoredanske.dk/Samfund,_jura_og_politik/Samfund/International_politik_og_organisationer/integration\n",
     "*acessed 17.08.2017*\n",
     "\n",
-    "### andet\n",
+    "### Andet\n",
     "- Emner der ikke lader sif placere i overstående.\n",
     "\n",
-    "### ignore\n",
+    "### Ignore\n",
     "- Tekstelementer der ikke har noget at gøre med artiklen; det kan være links, henvisninger, reklamer, clutter ect.\n",
     "\n"
    ]
